--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -1,3 +1,71 @@
 /* This is a multi-line
 comment. Add your CSS code
 from Unit 1 - 5 below  */
+
+body {
+	font-family: helvetica, sans-serif;
+}
+
+.board {
+	height: 50%;
+	width: 50%;
+	display: inline-block;
+}
+
+.card {
+	height: 200px;
+	width: 150px;
+	border: 1px solid #000000;
+	background-color: rgb(255,255,0);
+	border-radius: 10px;
+	float: left;
+	margin: 8%;
+}
+
+h1 {
+	color: rgb(2, 132, 130);
+}
+
+h2 {
+	color: #ffd700;
+}
+
+nav a{
+	text-decoration: none;
+	color: white;
+	background-color: #ffbf00;
+	padding: 35px;
+	display: block;
+	float: left;
+}
+
+a:hover {
+	background-color: #ee5f3c;
+}
+
+nav {
+	background-color: #808080;
+}
+.name {
+	color: #ff0000;
+}
+
+.clearfix:after {
+        visibility: hidden;
+        display: block;
+        content: " ";
+        clear: both;
+        height: 0;
+        font-size: 0;
+      }
+
+footer {
+	background-color: #808080;
+	text-align: center;
+}
+
+.bottomline {
+	display: inline-block;
+	margin: 0 auto;
+	width: 30%;
+}
