updated javascript code and added images.. still needs work

--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -22,6 +22,18 @@ body {
 	margin: 8%;
 }
 
+.flippedCardKing {
+	background-image: url("king.png");
+}
+
+.flippedCardQueen {
+	background-image: url("queen.png");
+}
+
+.card:click {
+	
+}
+
 h1 {
 	color: rgb(2, 132, 130);
 }
